--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,21 @@
-- name: Snowflake Set Password
-   env:
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
-  jobs:
-    run:
-       pip install requirements.txt
-       streamlit run streamlitapp.py
+name: python
+
+on: push
+
+jobs:
+  test_env:
+    environment: TEST_SECRET
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Snowflake Set Password
+      run:  python -c 'import os;print(os.environ)'
+      env:
+         SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+         SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+         SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+         SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+    
